✨ Add nvidia envs

--- a/Dockerfile.huggingface
+++ b/Dockerfile.huggingface
@@ -29,6 +29,8 @@ ENV USERNAME=user \
     USER_GID=1000 \
     LANG=C.UTF-8 \
     LC_ALL=C.UTF-8 \
+    NVIDIA_VISIBLE_DEVICES=all \
+    NVIDIA_DRIVER_CAPABILITIES=all \
     EDITOR=code \
     VISUAL=code \
     GIT_EDITOR="code --wait" \
